--- a/main.css
+++ b/main.css
@@ -11,6 +11,11 @@ h1 {
     font-family: 'Audimat';
 }
 
+a {
+    text-decoration: none;
+    color: #fffcba;
+}
+
 #header {
     user-drag: none; 
     user-select: none;
@@ -22,8 +27,28 @@ h1 {
 
 #wrapper {
     margin: 30px auto 0;
-    width: 1300px;
+    min-width: 30em; 
+    max-width: 1300px;
     overflow: hidden;
+}
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    margin-bottom: 120px;
+}
+#footer {
+    font-family: 'Audimat';
+    font-size: 20px;
+    color:white;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    height: 60px;
+    background-color: #0b0a11;
 }
 
 #planets {
